Fix double overlapping select arrow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -128,3 +128,8 @@ ul[data-type="taskList"] li[data-checked="true"] > div > p {
 .ProseMirror ul.is-empty::before {
   content: unset;
 }
+
+/* Fix double select dropdown arrow */
+select {
+  background-image: unset;
+}
